--- a/styles/pages/_project-detail.scss
+++ b/styles/pages/_project-detail.scss
@@ -124,9 +124,10 @@
       margin: 0.4rem 0;
       border-radius: 2px;
       overflow-wrap: break-word;
+      white-space: break-spaces;
     }
 
-    a{
+    a {
       color: $color-primary-300;
     }
 
